# hn-digest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
dags/: hn_digest_dag.py
src/hn_digest/: fetcher.py  filter.py  scorer.py  storage.py
tests/: test_filter.py  test_scorer.py  test_storage.py
